[feature] Remove user signings (#17)
* [feature] Remove signing from interventions and create teleworking page list

* [feature] Fix displacements

* [feature] Time control service

* [feature] Time control list

* [feature] Time control and woffu fix

* [feature] Delete jsp
