# gestepm-model-api/src/main/java/com/epm/gestepm/modelapi/teleworkingsigning/exception/TeleworkingSigningNotFoundException.java
@@ -1,0 +1,12 @@
+package com.epm.gestepm.modelapi.teleworkingsigning.exception;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@Getter
+@AllArgsConstructor
+public class TeleworkingSigningNotFoundException extends RuntimeException {
+
+  private final Integer id;
+
+}
