# gestepm-model/src/main/java/com/epm/gestepm/model/timecontrol/dao/constants/TimeControlAttributes.java
@@ -1,0 +1,21 @@
+package com.epm.gestepm.model.timecontrol.dao.constants;
+
+public abstract class TimeControlAttributes {
+
+  public static final String ATTR_TC_ID = "attr_tc_id";
+
+  public static final String ATTR_TC_IDS = "attr_tc_ids";
+
+  public static final String ATTR_TC_USER_ID = "attr_tc_user_id";
+
+  public static final String ATTR_TC_TYPE = "attr_tc_type";
+
+  public static final String ATTR_TC_TYPES = "attr_tc_types";
+
+  public static final String ATTR_TC_DESCRIPTION = "attr_tc_description";
+
+  public static final String ATTR_TC_START_DATE = "attr_tc_start_date";
+
+  public static final String ATTR_TC_END_DATE = "attr_tc_end_date";
+
+}
